--- a/infrastructure/templates/buildspec.yml
+++ b/infrastructure/templates/buildspec.yml
@@ -2,7 +2,8 @@ version: 0.2
 
 phases:
   install:
-    - curl -fsSL https://bun.sh/install | bash
+    commands:
+      - curl -fsSL https://bun.sh/install | bash
   build:
     commands:
-      - echo "Building the application"
+      - bun --version
