--- a/infrastructure/templates/buildspec.yml
+++ b/infrastructure/templates/buildspec.yml
@@ -4,6 +4,8 @@ phases:
   install:
     commands:
       - curl -fsSL https://bun.sh/install | bash
+      - export BUN_INSTALL="$HOME/.bun"
+      - export PATH="$BUN_INSTALL/bin:$PATH"
   build:
     commands:
       - bun --version
