--- a/infrastructure/templates/buildspec.yml
+++ b/infrastructure/templates/buildspec.yml
@@ -8,4 +8,6 @@ phases:
       - export PATH="$BUN_INSTALL/bin:$PATH"
   build:
     commands:
-      - bun --version
+      - cd ./frontend
+      - bun run build
+      - aws s3 sync --delete ./build s3://$BUCKET_NAME
